# 100m_taxi_bench

./: .gitignore  README.md  taxi.k  taxi.q  taxi.sql
taxi_cc/: Makefile  taxi.cc
taxi_nim/: taxi_nim.nimble
taxi_nim/bench/: taxi_bench  taxi_bench.nim
taxi_nm/: taxi.nimble  taxi_nm.nimble
taxi_nm/bench/: taxi_bench.nim
taxi_nm/src/: taxi.nim
taxi_nm/src/taxi/: avx2.nim  avx512.nim
taxi_rs/: Cargo.toml
taxi_rs/benches/: taxi_bench.rs
taxi_rs/src/: lib.rs
taxi_rs_safe/: Cargo.toml
taxi_rs_safe/benches/: taxi_bench.rs
taxi_rs_safe/src/: lib.rs
