[package]
name = "taxi"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "taxi_bench"
harness = false

[dependencies]
rand = "*"
lazy_static = "*"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
