[package]
name = "taxi"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "taxi_bench"
harness = false

[dependencies]
packed_simd = { version = "0.3.6", package = "packed_simd_2" }

[dev-dependencies]
rand = "*"
lazy_static = "*"
criterion = "0.3"

[profile.bench]
# rustflags = ["-C target-feature=+avx2", "-C target-feature=+popcnt"]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bin]]
name = "taxi"

